--- a/projects/quote-machine/index.html
+++ b/projects/quote-machine/index.html
@@ -16,17 +16,27 @@
 
 
   <div class="wrapper">
-    <div class="box header"><button class="btn btn-primary" id="btn">Another Quote</button></div>
+    <div class="box header"><button class="btn btn-success" id="button">Another Quote</button></div>
 
-    <div class="box sidebar">Sidebar</div>
+    <div class="box sidebar">
+      <button type="submit" style="border: 0; background: transparent" id="tweet">
+        <img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fde%2Fthumb%2F9%2F9f%2FTwitter_bird_logo_2012.svg%2F1259px-Twitter_bird_logo_2012.svg.png&f=1" width="60" height="35" alt="submit" />
+      </button>
+      
+
+    </div>
 
     <div class="box content">Content</div>
 
-    <div class="overlay">
-    <div>
-      <p class="message">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates rerum, commodi a provident, nemo alias! Ab velit eveniet, libero eius.</p>
+    <div class="overlay text-center">
+      <div>
+        <p class="message" id="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit..</p>
+      </div>
+      <div>
+        <i id="auth"></i>
+      </div>
     </div>
-    </div>
+
   </div>
 
 
