--- a/projects/twitch-api/index.html
+++ b/projects/twitch-api/index.html
@@ -41,6 +41,14 @@
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="./script.js"></script>
+    
+    <!-- <script src="async.js"></script> -->
+
+
+    <!-- <script src="./script.js"></script> -->
+    <script src="new.js"></script>
+    <!-- <script src="123.js"></script> -->
+    <!-- <script src="play.js"></script> -->
+
 </body>
 </html>
